--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <ZoomBlurPass :strength="zoomStrength" />
       </EffectComposer>
     </Renderer>
-    <a class="random-btn" href="#" @click="updateColors" @mouseenter="targetTimeCoef = 30" @mouseleave="targetTimeCoef = 1">Random Colors</a>
+    <a class="random-btn" href="#" @click="updateColors" @mouseenter="targetTimeCoef = 30" @mouseleave="targetTimeCoef = 1">Random -- Colors</a>
   `,
             components: { BufferGeometry, Camera, EffectComposer, Points, Renderer, RenderPass, Scene, ShaderMaterial, Texture, UnrealBloomPass, ZoomBlurPass },
             setup() {
